modificación header, menú y secciones

--- a/index.html
+++ b/index.html
@@ -21,55 +21,30 @@
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#landingkit-navbar" aria-controls="landingkit-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#landingkit-navbar"
+                    aria-controls="landingkit-navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
+        
                 <div class="collapse navbar-collapse" id="landingkit-navbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" data-scroll href="#home">Inicio <span class="sr-only">(current)</span></a>
+                            <a class="nav-link active" data-scroll href="#home">Inicio <span
+                                    class="sr-only">(current)</span></a>
                         </li>
-
+        
                         <li class="nav-item">
                             <a class="nav-link" data-scroll href="#features">Quiénes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" data-scroll href="#pricing">Producto</a>
+                            <a class="nav-link" data-scroll href="#pricing">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" data-scroll href="#reviews">Nuestros Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" data-scroll href="#faqs">Faqs</a>
+                            <a class="nav-link" data-scroll href="#subscribe">Contacto</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-scroll href="#subscribe">Subscribe</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav ml-auto navbar-right">
-                        <li class="nav-item">
-                            <a class="nav-link btn btn-primary" target="_blank" href="https://wrapbootstrap.com/theme/assan-multipurpose-18-themes-admin-WB05F069P/?ref=wb_rakesh">Buy Now</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <span class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Landing Demos
-                            </span>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item current-demo" href="index.html">Default Demo</a>
-                                <a class="dropdown-item" href="index-video.html">Video BG Demo</a>
-                                <a class="dropdown-item" href="index-newsletter.html">Newsletter Demo</a>
-                                <a class="dropdown-item" href="index-contact-form.html">Contact form Demo</a>
-                                <a class="dropdown-item" href="index-minimal-flat.html">Minimal flat Demo</a>
-                                <a class="dropdown-item" href="index-saas1.html">Saas demo1</a>
-                                <a class="dropdown-item" href="index-saas2.html">Saas demo2</a>
-                                <a class="dropdown-item" href="index-saas3.html">Saas demo3</a>
-                                <a class="dropdown-item" href="index-mobileapp1.html">Mobile App demo1</a>
-                                <a class="dropdown-item" href="index-mobileapp2.html">Mobile App demo2</a>
-                                <a class="dropdown-item" href="index-mobileapp3.html">Mobile App demo3</a>
-                            </div>
-                        </li>
-
                     </ul>
                 </div>
             </div>
@@ -339,7 +314,7 @@
                     </div>
                 </div>
             </section>
-            <section id="faqs" class="border-btm1">
+            <section id="faqs" class="border-btm1" hidden="hidden">
                 <div class="container pt90 pb50">
 
                     <h6 class="text-dark-gray text-center">Frequently asked questions</h6>
