--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-sticky">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/Proyecto Creador de logotipos-4 (1).png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#landingkit-navbar"
                     aria-controls="landingkit-navbar" aria-expanded="false" aria-label="Toggle navigation">
