--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
                     <div class="row">
                         <div class="col-lg-10 mr-auto ml-auto text-center">
                             <h5 class="text-white-gray text-center">Envíanos un correo y agréganos en redes sociales</h5>
-                            <h3 class="text-center text-white title-font mb50">tiendaespaciodecora@gmail.com</h3>
+                            <a href="mailto:tiendaespaciodecora@gmail.com" class="text-center text-white title-font mb50">tiendaespaciodecora@gmail.com</a>
+
                         </div>
                     </div>
                     <div class="social-buttons">
                         <span>
-                            
                             <a href="https://www.instagram.com/espacio_decora" class="social-icon si-dark si-instagram si-dark-round" target="_blank">
                                 <i class="fa fa-instagram"></i>
                                 <i class="fa fa-instagram"></i>
